# bitway

./: .gitignore  .prettierrc  README.md  bun.lockb  example.dev.env  llm_database.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
src/backend/: __init__.py  blog.py  db.py  env.py  founder.py  llm_database.py  misc.py  models.py  password.py  schema.sql  startup.py  user.py
src/frontend/: api.ts  icons.tsx  index.html  layout.tsx  main.css  main.tsx  misc.ts  models.ts  query.ts  reproca.ts  router.tsx  session.ts  theme.tsx
src/frontend/components/: Blog.tsx  Footer.tsx  Header.tsx  Login.tsx  NotFound.tsx  ThemeDropdown.tsx  UserDropdown.tsx  UserHandle.tsx
src/frontend/hooks/: form.tsx
src/frontend/routes/: CreateAccount.tsx  CreatePost.tsx  CreateStartup.tsx  MutualFollowers.tsx  NotFoundPage.tsx  Root.tsx  RootLayout.tsx  Startup.tsx  User.tsx
