[project]
name = "backend"
version = "0.0.1"
authors = [{ name = "aspizu", email = "aspizu@protonmail.com" }]
dependencies = [
    "argon2-cffi>=23.1.0",
    "rich>=13.7.1",
    "whatwg-url>=2018.8.26",
    "requests>=2.31.0",
    "vald @ file:///home/aspizu/Documents/Projects/vald",
    "reproca @ file:///home/aspizu/Documents/Projects/reproca",
]
readme = "README.md"
requires-python = ">= 3.8"


[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed          = true
dev-dependencies = ["uvicorn>=0.29.0"]

[tool.rye.scripts]
dev          = { cmd = "uvicorn src.backend:app --reload" }
migrate      = { call = "backend:migrate" }
llm_database = { call = 'backend.llm_database:main' }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff.lint]
select            = ["ALL"]
ignore            = ["CPY", 'COM', 'T201']
preview           = true
extend-safe-fixes = ["ALL"]
fixable           = ["ALL"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
typeCheckingMode                   = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportUnknownVariableType          = false
reportUnknownMemberType            = false
reportUnknownArgumentType          = false
reportMissingModuleSource          = false
reportMissingTypeStubs             = false
reportWildcardImportFromLibrary    = false

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["reproca.response.Response"]
